<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Music1">

    <Button
        android:id="@+id/button_Play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="116dp"
        android:onClick="playMusic"
        android:text="@string/play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_Pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="70dp"
        android:onClick="pauseMusic"
        android:text="@string/pause"
        app:layout_constraintStart_toStartOf="@+id/button_Play"
        app:layout_constraintTop_toBottomOf="@+id/button_Play" />

    <Switch
        android:id="@+id/switch_loop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="98dp"
        android:text="@string/loop"
        app:layout_constraintStart_toStartOf="@+id/button_Pause"
        app:layout_constraintTop_toBottomOf="@+id/button_Pause" />
</androidx.constraintlayout.widget.ConstraintLayout>